--- a/themes/genesis-base-child-theme/assets/scss/partials/blocks/core/_blocks-core-group.scss
+++ b/themes/genesis-base-child-theme/assets/scss/partials/blocks/core/_blocks-core-group.scss
@@ -52,7 +52,10 @@
 
           &.alignfull,
           &.alignwide,
-          &.aligncenter {
+          &.aligncenter,
+          .wp-block[data-align="full"] &,
+          .wp-block[data-align="wide"] &,
+          .wp-block[data-align="center"] & {
                @include spacing( 'vertical', null );
           }
      }
